# giac_sources

./: Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  compile.mingw  config.h  config.h.in  config.h.win  config.status  configure  configure.ac  configure.in  giac.specs  giac.specs32  java.README  libtool  mkdebian  mkosx10  mkosx3  xcas.desktop  xcas.nsi  xcas64.nsi  xcaswin.nsi
doc/: Makefile  Makefile.am  Makefile.in  README  aide_cas  algolycee.html  algoseconde.html  codemirror.css  giac.tex  giacfr.tex  giactableau.js  giacwasm.js  index.html  khicasnw.html  loadgiac.js  longhelp.js  menufr.js  numworks.js  nws.html  nws.js  nws_en.html  nws_sig.js  python.js  recovery  service-worker.js  shakeys  simple.html  tableau.js  test.html  test.tex  testfr.html  testfr.tex  w3.css  xcas.js  xcasen.html  xcasfr.html  xcasfrwasm.html  xcasmode.js
doc/de/: Makefile  Makefile.in  aide_cas  xcasmenu
doc/dxcas/: demarr1.xws  demarr10.xws  demarr11.xws  demarr12.xws  demarr13.xws  demarr14.xws  demarr15.xws  demarr16.xws  demarr17.xws  demarr19.xws  demarr2.xws  demarr20.xws  demarr21.xws  demarr22.xws  demarr23.xws  demarr24.xws  demarr25.xws  demarr3.xws  demarr4.xws  demarr5.xws  demarr6.xws  demarr7.xws  demarr8.xws  demarr9.xws
doc/el/: Makefile  Makefile.am  Makefile.in  cas_el.aux  cas_el.dvi  cas_el.ps  xcasmenu
doc/en/: Makefile  Makefile.am  Makefile.in  cascmd_en.dvi  cascmd_en.ps  cascmd_en.tex  casinter.dvi  casinter.ps  casinter.tex  giac_us.info  giac_us.texinfo  html_mall  html_mtt  html_vall  pgcd.cc  pgcd.cpp  tutoriel.haux  xcasmenu  (+5 more)
(+3174 files in other folders)
